theory library. Plenty of existing examples may be found in the Isabelle
sources by searching for "notation=" (without quotes and no extra
space). Occasional INCOMPATIBILITY for 'no_syntax' or 'no_notation'
declarations in user applications: the mixfix template needs to be
adapted accordingly, but it is often better to use "unbundle no
foobar_syntax", as explained for HOL libraries below.

* Command "unbundle b" and its variants like "context includes b" allow
an optional name prefix with the reserved word "no": "unbundle no b"
etc. This reverses both the order and polarity of bundled declarations
like 'notation' vs. 'no_notation', and thus avoids redundant bundle
definitions like "foobar_syntax" vs. "no_foobar_syntax", because "no
foobar_syntax" may be used instead. Consequently, the syntax for
multiple bundle names has been changed slightly, demanding an explicit
'and' keyword. Minor INCOMPATIBILITY.

* Command "open_bundle b" is like "bundle b" followed by "unbundle b",
so its declarations are applied immediately, but also named for later
re-use: "unbundle no b" etc.

* Various HOL declaration bundles support adhoc modification of
notation, notably like this:

  unbundle no abs_syntax
  unbundle no binomial_syntax
  unbundle no converse_syntax
  unbundle no floor_ceiling_syntax
  unbundle no funcset_syntax
  unbundle no let_syntax
  unbundle no list_comprehension_syntax
  unbundle no list_enumeration_syntax
  unbundle no list_maplet_syntax
  unbundle no list_syntax
  unbundle no list_update_syntax
  unbundle no maplet_syntax
  unbundle no prod_list_syntax
  unbundle no reflcl_syntax
  unbundle no relcomp_syntax
  unbundle no rtrancl_syntax
  unbundle no set_enumeration_syntax
  unbundle no sum_list_syntax
  unbundle no trancl_syntax
  unbundle no tuple_syntax
  unbundle no uminus_syntax
  unbundle no update_syntax

This is more robust than individual 'no_syntax' / 'no_notation'
commands, which need to copy mixfix declarations from elsewhere and thus